# tc_markers

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish_release.yml  test.yml
backend/: generate_paths.py  requirements.txt
tcmarkers/: __init__.py  markers.py
tests/: test_image_production.py
