[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "tcmarkers"
dynamic = ["version"]
description = "Tropical Storm and Hurricane Markers for Matplotlib"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "matplotlib",
    "numpy"
]

# Only include the tcmarkers directory as a package
[tool.setuptools.packages.find]
where = ["tcmarkers"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/abrammer/tc_markers"

[tool.setuptools_scm]
write_to = "tcmarkers/_version.py" 