[build-system]
requires = ["setuptools>=77", "setuptools-scm[toml]>=8.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcmarkers"
dynamic = ["version"]
description = "Tropical Storm and Hurricane Markers for Matplotlib"
readme = "README.md"
license-files = [ "LICENSE" ]
requires-python = ">=3.6"
classifiers = [ "Programming Language :: Python :: 3" ]
dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/abrammer/tc_markers"

[tool.setuptools]
packages = ["tcmarkers"]

[tool.setuptools_scm]
write_to = "tcmarkers/_version.py" 
