[metadata]
name = tcmarkers
version = attr: tcmarkers.__version__
description = "Tropical Storm and Hurricane Markers for Matplotlib"
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages = tcmarkers
install_requires =
    matplotlib
    numpy